[package]
name = "CarbonJS"
version = "0.1.6"
edition = "2021"
authors = [ "malezjaa" ]
description = "A KubeJS script manager"
license = "MIT"
repository = "https://github.com/malezjaa/carbonjs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
colored = "2"
git2 = "0.17.1"
tempfile = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.17"

[[bin]]
name = "carbon"
path = "src/main.rs"